--- a/templates/partials/post.hbs
+++ b/templates/partials/post.hbs
@@ -1,1 +1,5 @@
 <!-- Template für Blogeinträge -->
+POST PAGE
+<h2>{{title}}</h2><br>
+{{translation.postedby}} {{postedBy}} {{translation.on}} {{createdAt}}<br><br>
+{{content}}
