--- a/templates/partials/static.hbs
+++ b/templates/partials/static.hbs
@@ -1,1 +1,6 @@
 <!-- Template für statische Seiten -->
+STATIC PAGE<br>
+POST PAGE
+<h2>{{title}}</h2><br>
+{{translation.postedby}} {{postedBy}} {{translation.on}} {{createdAt}}<br><br>
+{{content}}
