Post Manager working

--- a/templates/adminTemplate.hbs
+++ b/templates/adminTemplate.hbs
@@ -17,6 +17,7 @@
             <li><a href="/backend/staticOverview">{{translation.staticOverview}}</a></li>
             <li><a href="/backend/createStatic">{{translation.createStatic}}</a></li>
             {{#if user.isAdmin}}<li><a href="/backend/users">{{translation.userOverview}}</a></li>{{/if}}
+            <li><a href="/backend/logoff">{{translation.logoff}}</a></li>
         </ul>
     </div>
     <div class="content">
