--- a/templates/adminTemplate.hbs
+++ b/templates/adminTemplate.hbs
@@ -5,6 +5,8 @@
 <head>
     <link rel="stylesheet" ref="{{{stylesheetLink}}}" />
     <title>Admin - {{title}}</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+    <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 </head>
 
 <body>
