--- a/templates/partials/createEditPost.hbs
+++ b/templates/partials/createEditPost.hbs
@@ -1,8 +1,10 @@
+
 <h2>{{#if edit}}{{translation.editPostHeader}}{{/if}}
     {{#unless edit}}{{translation.createPostHeader}}{{/unless}}</h2>
 
 {{#if existed}} <div class="error">{{translation.titleExistedError}}</div>{{/if}}
 <form method="POST" action="/backend/createPost">
+    <div class="createPostForm">
     <label for="title">{{translation.postTitle}}</label>
     <input type="text" name="title" value="{{edit.title}}"><br>
     <label for="language">{{translation.languageShortcode}}</label>
@@ -13,5 +15,23 @@
     {{#if edit}}<input type="hidden" name="edit" value="true">
     <input type="hidden" name="id" value="{{edit.id}}" />{{/if}}
     <input type="submit" value="{{translation.createPostButton}}" />
+    </div>
+<div class="categoriesCheckboxes">
+    <h3>{{translation.categories}}:</h3><br>
+    <ul>
+        {{#each categories}}
+        <li>
+            <input type="checkbox" name="_cat{{this.id}}" value="{{this.id}}" {{#if this.checked}}checked{{/if}}/>
+            <label for="_cat{{this.id}}">{{this.title}}</label>
+        </li>
+        {{/each}}
+        <li><a href="/backend/addCategory" target="_TOP">{{translation.addCategory}}</a></li>
+    </ul>
+</div>
+
+
 
 </form>
+<script>
+    var simplemde = new SimpleMDE({spellchecker: false});
+</script>
