--- a/templates/adminTemplate.hbs
+++ b/templates/adminTemplate.hbs
@@ -3,26 +3,51 @@
 <html>
 
 <head>
-    <link rel="stylesheet" ref="{{{stylesheetLink}}}" />
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+
     <title>Admin - {{title}}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 </head>
 
 <body>
-    <div id="mainLogo" class="mainLogo"><img src="{{{mainLogoLink}}}" /></div>
-    <div class="adminMenu">
-        <ul class="adminMenu adminMenuList">
-            <li><a href="/backend">{{translation.home}}</a></li>
-            <li><a href="/backend/postOverview">{{translation.postOverview}}</a></li>
-            <li><a href="/backend/createPost">{{translation.createPost}}</a></li>
-            <li><a href="/backend/staticOverview">{{translation.staticOverview}}</a></li>
-            <li><a href="/backend/createStatic">{{translation.createStatic}}</a></li>
-            {{#if user.isAdmin}}<li><a href="/backend/users">{{translation.userOverview}}</a></li>{{/if}}
-            <li><a href="/backend/logoff">{{translation.logoff}}</a></li>
-        </ul>
-    </div>
-    <div class="content">
+    <!-- <div id="mainLogo" class="mainLogo"><img src="{{{mainLogoLink}}}" /></div> -->
+    <nav class="navbar navbar-expand-lg justify-content-between navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">{{title}}</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                   
+                    <li class="nav-item"><a class="nav-link" href="/backend">{{translation.home}}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/backend/postOverview">{{translation.postOverview}}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/backend/createPost">{{translation.createPost}}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/backend/staticPageOverview">{{translation.staticOverview}}</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/backend/createStaticPage">{{translation.createStatic}}</a></li>
+                    {{#if user.isAdmin}}<li class="nav-item"><a class="nav-link" href="/backend/users">{{translation.userOverview}}</a></li>{{/if}}
+                </ul>
+                
+            </div>
+        <span class="navbar-text">{{user.displayName}}</span>&nbsp;
+        <form class="form-inline">
+         <a class="form-control nav-item nav-link btn-success" href="/backend/renderWebsite">{{translation.renderWebsite}}</a>
+
+        <a class="form-control nav-item nav-link" href="/backend/logoff">{{translation.logoff}}</a>
+        </form>
+    </nav>
+
+    <div class="container-fluid">
         {{> (lookup . "template")}}
     </div>
 </body>
