--- a/templates/partials/post.hbs
+++ b/templates/partials/post.hbs
@@ -1,5 +1,7 @@
-<!-- Template für Blogeinträge -->
-POST PAGE
-<h2>{{title}}</h2><br>
-{{translation.postedby}} {{postedBy}} {{translation.on}} {{createdAt}}<br><br>
-{{content}}
+<!-- Template für Posts -->
+<h2>{{content.title}}</h2><br>
+{{translation.availableTranslations}}: {{#each post.translations}} <a
+    href="../../{{this.language}}/posts/{{this.urlTitle}}.html">{{this.language}}</a> {{/each}}<br>
+{{#each categories}}{{this.title}} {{/each}}<br>
+{{translation.postedBy}} {{post.postedByUser.displayName}} {{translation.at}} {{formatDate post.createdAt}}<br><br>
+{{{content.content}}}
