--- a/templates/partials/userOverview.hbs
+++ b/templates/partials/userOverview.hbs
@@ -1,42 +1,59 @@
-<table class="userOverviewTable">
-    <thead>
-        <th>{{translation.ID}}</th>
-        <th>{{translation.username}}</th>
-        <th>{{translation.displayName}}</th>
-        <th>{{translation.isAdmin}}</th>
-        <th>{{translation.createdAt}}</th>
-        <th>{{translation.createdBy}}</th>
-        <th>{{translation.actions}}</th>
-    </thead>
-    <tbody>
-        {{#each userList}}
-        <tr>
-            <td>{{this.id}}</td>
-            <td>{{this.username}}</td>
-            <td>{{this.displayName}}</td>
-            <td><input type="checkbox" disabled {{#if this.isAdmin}}checked{{/if}}></td>
-            <td>{{this.createdAt}}</td>
-            <td>{{this.createdByUser.displayName}}{{#unless this.createdByUser}}/{{/unless}}</td>
-            <td><a href="/backend/users?edit={{this.id}}"><button>{{../translation.edit}}</button></a></td>
-        </tr>
-        {{/each}}
-    </tbody>
-</table>
+<div class="row">
+    <div class="col-9">
+        <div class="container">
+            <table class="table table-striped">
+                <thead>
+                    <th scope="col">{{translation.ID}}</th>
+                    <th scope="col">{{translation.username}}</th>
+                    <th scope="col">{{translation.displayName}}</th>
+                    <th scope="col">{{translation.isAdmin}}</th>
+                    <th scope="col">{{translation.createdAt}}</th>
+                    <th scope="col">{{translation.createdBy}}</th>
+                    <th scope="col">{{translation.actions}}</th>
+                </thead>
+                <tbody>
+                    {{#each userList}}
+                    <tr>
+                        <th scope="row">{{this.id}}</td>
+                        <td>{{this.username}}</td>
+                        <td>{{this.displayName}}</td>
+                        <td><input type="checkbox" class="form-check-input" disabled {{#if this.isAdmin}}checked{{/if}}></td>
+                        <td>{{formatDate this.createdAt}}</td>
+                        <td>{{this.createdByUser.displayName}}{{#unless this.createdByUser}}/{{/unless}}</td>
+                        <td><a href="/backend/users?edit={{this.id}}"><button type="button"
+                                    class="btn btn-primary">{{../translation.edit}}</button></a></td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
+    </div>
+        <div class="col-3">
+            <div class="container">
+                <form method="POST" action="/backend/createUser">
+                    <label for="username" class="form-label">{{translation.username}}:</label> <input type="text"
+                        placeholder="{{translation.usernamePlaceholder}}" name="username"
+                            class="form-control"
+                        value="{{edit.username}}" /><br>
 
-<hr>
+                    <label for="displayName" class="form-label">{{translation.displayName}}:</label> <input type="text"
+                        placeholder="{{translation.displayNamePlaceholder}}" name="displayName"
+                            class="form-control"
+                        value="{{edit.displayName}}" /><br>
+                    <label for="password" class="form-label">{{translation.password}}:</label><input type="password" name="password" class="form-control"><br>
+                    <label for="password2" class="form-label">{{translation.repeatPassword}}:</label><input type="password" class="form-control"
+                        name="password2"><br>
+                    <input type="checkbox" name="isAdmin" class="form-check-input"
+                        value="lol" {{#if edit.isAdmin}}checked{{/if}} /> <label for="isAdmin" class="form-check-label">{{translation.isAdminCheckbox}}</label><br>
+                    {{#if edit}}
+                    <input type="hidden" name="id" value="{{edit.id}}" />
+                    <input type="checkbox" class="form-check-input" name="deleteUser" value="lol" /> 
+                    <label for="deleteUser" class="form-check-label">{{translation.deleteUserCheckbox}}</label> <br>{{/if}}
 
-<form method="POST" action="/backend/createUser">
-    <label for="username">{{translation.username}}:</label> <input type="text"
-        placeholder="{{translation.usernamePlaceholder}}" name="username" value="{{edit.username}}"/><br>
+                    <input type="submit" class="btn btn-success" value="{{translation.createUserButton}}">
+                </form>
+            </div>
+        </div>
 
-    <label for="displayName">{{translation.displayName}}:</label> <input type="text"
-        placeholder="{{translation.displayNamePlaceholder}}" name="displayName" value="{{edit.displayName}}"/><br>
-    <label for="password">{{translation.password}}:</label><input type="password" name="password"><br>
-    <label for="password2">{{translation.repeatPassword}}:</label><input type="password" name="password2"><br>
-    <label for="isAdmin">{{translation.isAdminCheckbox}}</label><input type="checkbox" name="isAdmin" value="lol"{{#if edit.isAdmin}}checked{{/if}}/><br>
-    {{#if edit}}
-    <input type="hidden" name="id" value="{{edit.id}}" />
-    <label for="deleteUser">{{translation.deleteUserCheckbox}}</label><input type="checkbox" name="deleteUser" value="lol"/><br>{{/if}}
 
-    <input type="submit" value="{{translation.createUserButton}}">
-</form>
+    </div>
