--- a/templates/adminTemplate.hbs
+++ b/templates/adminTemplate.hbs
@@ -7,9 +7,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    
 
 
     <title>Admin - {{title}}</title>
@@ -21,7 +31,9 @@
     <!-- <div id="mainLogo" class="mainLogo"><img src="{{{mainLogoLink}}}" /></div> -->
     <nav class="navbar navbar-expand-lg justify-content-between navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">{{title}}</a>
+            <a class="navbar-brand" href="/">
+                <img src="/static/img/gazo.svg" height="30" alt="{{title}}">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -31,17 +43,35 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                    
                     <li class="nav-item"><a class="nav-link" href="/backend">{{translation.home}}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/backend/postOverview">{{translation.postOverview}}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/backend/createPost">{{translation.createPost}}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/backend/staticPageOverview">{{translation.staticOverview}}</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/backend/createStaticPage">{{translation.createStatic}}</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            {{translation.postOverview}}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink1">
+                            <a class="dropdown-item" href="/backend/postOverview">{{translation.postOverview}}</a>
+                            <a class="dropdown-item" href="/backend/createPost">{{translation.createPost}}</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink2" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            {{translation.staticOverview}}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
+                            <a class="dropdown-item" href="/backend/staticPageOverview">{{translation.staticOverview}}</a>
+                            <a class="dropdown-item" href="/backend/createStaticPage">{{translation.createStatic}}</a>
+                        </div>
+                    </li>
+                    
                     {{#if user.isAdmin}}<li class="nav-item"><a class="nav-link" href="/backend/users">{{translation.userOverview}}</a></li>{{/if}}
                 </ul>
                 
             </div>
         <span class="navbar-text">{{user.displayName}}</span>&nbsp;
+        <a class="form-control form-inline nav-item nav-link btn-success collapse" href="/backend/renderWebsite">{{translation.renderWebsite}}</a>
         <form class="form-inline">
-         <a class="form-control nav-item nav-link btn-success" href="/backend/renderWebsite">{{translation.renderWebsite}}</a>
+         
 
         <a class="form-control nav-item nav-link" href="/backend/logoff">{{translation.logoff}}</a>
         </form>
