--- a/templates/partials/createCategory.hbs
+++ b/templates/partials/createCategory.hbs
@@ -1,3 +1,4 @@
+<!-- createCategory.hbs -->
 <form method="POST" action="/backend/createCategory">
     <label for="title">{{translation.name}}:</label><input type="text" name="title" /><br>
     <label for="language">{{translation.language}}</label><input type="text" name="language" value="{{translation.translationLang}}" /><br>
