--- a/templates/partials/createEditPost.hbs
+++ b/templates/partials/createEditPost.hbs
@@ -1,3 +1,4 @@
+<!-- createEditPost.hbs -->
 <form method="POST" action="/backend/createPost">
 {{#if existed}} <div class="error">{{translation.titleExistedError}}</div>{{/if}}
 
