--- a/templates/partials/login.hbs
+++ b/templates/partials/login.hbs
@@ -1,3 +1,4 @@
+<!-- login.hbs -->
 {{translation.login}}<br>
 {{#if loginFailed}}{{translation.loginFailed}}<br>{{/if}}
 <form method="POST" action="/backend/login">
