--- a/templates/partials/post.hbs
+++ b/templates/partials/post.hbs
@@ -1,4 +1,4 @@
-<!-- Template für Posts -->
+<!-- post.hbs -->
 <h2>{{content.title}}</h2><br>
 {{translation.availableTranslations}}: {{#each post.translations}} <a
     href="../../{{this.language}}/posts/{{this.urlTitle}}.html">{{this.language}}</a> {{/each}}<br>
