--- a/templates/partials/postPreview.hbs
+++ b/templates/partials/postPreview.hbs
@@ -1,3 +1,4 @@
+<!-- postPreview.hbs -->
 <div class="postPreview">
     <h2>{{content.title}}</h2><br>
     {{translation.availableTranslations}}: {{#each post.translations}} <a
