--- a/templates/partials/static.hbs
+++ b/templates/partials/static.hbs
@@ -1,4 +1,4 @@
-<!-- Template für statische Seiten -->
+<!-- static.hbs -->
 <h2>{{content.title}}</h2><br>
 {{translation.availableTranslations}}: {{#each page.translations}} <a href="..//{{this.language}}/{{this.urlTitle}}.html">{{this.language}}</a> {{/each}}<br>
 {{#each categories}}{{this.title}} {{/each}}<br>
