--- a/templates/partials/createEditStaticPage.hbs
+++ b/templates/partials/createEditStaticPage.hbs
@@ -1,3 +1,4 @@
+<!-- createEditStaticPage.hbs -->
 <form method="POST" action="/backend/createStaticPage">
 <div class="row">
     <div class="col-3">
